--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.0",
     "pg": "^8.12.0",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
